--- a/lispy/ChangeLog
+++ b/lispy/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-13  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* lispy-vars.el
+	(lispy-version): let's say that this is 0.5 release :)
+
 2004-08-10  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* lispy-utils.el
